--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "me.jpg"
   name             : "Fangdi Li"
   pronouns         : # example: "she/her"  
   bio              : "M.S. student at Zhejiang University, B.Eng. from South China University of Technology."
